# wingman-repro

./: .gitignore  Cargo.toml
.cargo/: config.toml  config_defmt.toml
firmware/: 50-wingman-st-link-access.rules  Cargo.toml  Embed.toml  build.rs  memory.x
firmware/src/: exception_handlers.rs  lan8720a.rs  lib.rs  macros.rs  main.rs  oled_display.rs
firmware/src/data/: mod.rs
firmware/src/io/: dio.rs  mod.rs
firmware/src/net/: ethernet.rs  mod.rs  net_storage.rs
firmware_logic/: Cargo.toml
firmware_logic/src/: lib.rs
firmware_logic/src/controller/: anchor_up_down.rs  engine_ignition.rs  lights.rs  mod.rs  pumps.rs
firmware_logic/src/data/: user_commands.rs
firmware_logic/src/io/: digital_input_impl.rs  digital_output_impl.rs  mod.rs
