[package]
name = "wingman_io2_foiler"
version = "0.2.0"
license-file = "LICENSE.md"
edition = "2021"
resolver = "2"

[features]
defmt = [ "dep:defmt", "dep:defmt-rtt", "panic-probe/print-defmt", "smoltcp/defmt" ]
rtt = [ "dep:rtt-target", "panic-probe/print-rtt"]

[dependencies]
rtic.workspace = true
rtic-monotonics.workspace = true
stm32h7xx-hal.workspace = true
cortex-m.workspace = true
panic-probe.workspace = true
smoltcp.workspace = true
embedded-storage.workspace = true
strum.workspace = true
strum_macros.workspace = true
cortex-m-rt.workspace = true
uom.workspace = true

# debugging and logging
rtt-target = { version = "0.5", optional = true }
defmt = { version = "0.3.5", optional = true }
defmt-rtt = { version = "0.4.0", optional = true }

ssd1351 = { version = "0.4", features = ["graphics", "buffered"] }
embedded-hal = "0.2.7"
embedded-graphics = "=0.7"
format_no_std = "1"
# Do not update smoltcp before stm32h7xx-hal
asm-delay-embedded-time = "0.9.1"
embedded-time = "0.12"
array-init = "2"
ringbuffer = { version = "0.15", default_features = false }
postcard = "1"
serde = { version = "1", default-features = false }
firmware_logic = { path = "../firmware_logic" }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

[build-dependencies]
built = { version = "0.7", features = ["git2", "chrono"] }

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-
