[package]
name = "firmware_logic"
version = "0.1.0"
edition = "2021"

[dependencies]
ringbuffer = { version = "0.15", default_features = false }
rtt-target = { version = "0.5", optional = true }
defmt = { version = "0.3.5", optional = true }
defmt-rtt = { version = "0.4.0", optional = true }
rtic-monotonics.workspace = true

strum.workspace = true
strum_macros.workspace = true

serde = { version = "1", default-features = false }
fugit = "0.3"
serde-big-array = "0.5"
uom = { version = "0.36", default-features = false, features = ["autoconvert", "f32", "si", "serde"] }
